# src/routes/index.js
@@ -1,13 +1,22 @@
+const passport = require('passport');
 const router = require('express').Router();
-
-router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
     res.send('Colby MacArthur - CSE341 Project 2');
 });
 
-router.use('/users', require('./users'));
-router.use('/posts', require('./posts'));
+router
+    .use('/', require('./swagger'))
+    .use('/users', require('./users'))
+    .use('/posts', require('./posts'));
 
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', (req, res, next) => {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
